📚  Update Weeks 5 and 7

--- a/instructor_materials/IDM232-W05.md
+++ b/instructor_materials/IDM232-W05.md
@@ -16,7 +16,7 @@ theme: Plain Jane, 2
 
 ## MySQL Introduction
 
-^ We've learned enough PHP by now that we can build dynamic websites. We can build pages that link to other pages, web forms that submit data, and even access cookies to remember user data from page to page. You can build a pretty good website using only these tools. You can even have features like user log ins. But as your site complexity increases, you are going to reach the limits of what you can do with just PHP alone. And quickly, you'll discover that adding a database makes a lot of sense.
+^ We've learned enough PHP by now that we can build dynamic websites. You can build a pretty good website using only these tools. You can even have features like user log ins. But as your site complexity increases, you are going to reach the limits of what you can do with just PHP alone. And quickly, you'll discover that adding a database makes a lot of sense.
 
 ---
 
@@ -40,7 +40,7 @@ theme: Plain Jane, 2
 - Popular
 - Good Introduction to database concepts
 
-^ The database that we'll be using is going to be MySQL. MySQL is open source and free just like PHP. You can use other databases with PHP, almost any database you want. You just have to change the way that you connect to the database. But we're going to be using MySQL because it's easy to use. It's very popular and you're going to find lot's of support for it out there if you run into problems. And it also provides a good introduction to many common database concepts that you're going to find in any database that you use.
+^ The database that we'll be using is going to be MySQL. (_click_) MySQL is open source and free just like PHP. (_click_) You can use other databases with PHP, almost any database you want. You just have to change the way that you connect to the database. But we're going to be using MySQL because it's easy to use. (_click_) It's very popular and you're going to find lot's of support for it out there if you run into problems. (_click_) And it also provides a good introduction to many common database concepts that you're going to find in any database that you use.
 
 ---
 
@@ -60,7 +60,7 @@ theme: Plain Jane, 2
 - Spreadsheets are optimized for working with numbers
 - Databases are optimized for working with data
 
-^ Now, while this can be a useful analogy, (_click_) databases are not spreadsheets. (_click_) A database can define and traverse relationships between tables. That's that relational aspect again. It's very powerful. Spreadsheets don't give you that. The other big difference is that, when working with databases, (_click_) we're going to be issuing commands in order to interact with the database. With the spreadsheet, we have it all laid out in front of us in a visual medium where we can see all of those tables and rows and columns. Databases, we're not going to have that. We're going to be working with subsets of the data all the time. And we can ask it to show us some of that information. But we're going to be issuing commands to pull back bits of the data or issuing commands to manipulate parts of the data. And perhaps, it goes without saying, (_click_) that spreadsheets are optimized for adding numbers, that's what they do best. (_click_) Databases are optimized for working with data and that's what they do best.
+^ Now, while this can be a useful analogy, (_click_) databases are not spreadsheets. A database can define and traverse relationships between tables. That's that relational aspect again. It's very powerful. Spreadsheets don't give you that. The other big difference is that, when working with databases, we're going to be issuing commands in order to interact with the database. With the spreadsheet, we have it all laid out in front of us in a visual medium where we can see all of those tables and columns and rows. Databases, we're not going to have that. We're going to be working with subsets of the data all the time. And we can ask it to show us some of that information. But we're going to be issuing commands to pull back bits of the data or issuing commands to manipulate parts of the data. And perhaps, it goes without saying, (_click_) that spreadsheets are optimized for adding numbers, that's what they do best. (_click_) Databases are optimized for working with data and that's what they do best.
 
 ---
 
@@ -71,7 +71,7 @@ theme: Plain Jane, 2
   - 1 database = 1 application
   - Access permissions are granted at database level
 
-^ Let's review some of the common database terms that we're going to be using. So that you'll recognize them when I use them and make sure we're all on the same page about their meaning. The first, is just (_click_) database. We can have several databases running in MySQL at the same time. (_click_) A database is a set of tables. And each database will contain its own set of tables. (_click_) We'll typically have one database for one application. So we build our web application. It's going to connect to one and only one database. (_click_) And access permissions to our data are typically granted at the database level.
+^ Let's review some of the common database terms that we're going to be using. So that you'll recognize them when I use them and make sure we're all on the same page about their meaning. The first, is just (_click_) database. We can have several databases running in MySQL at the same time. A database is a set of tables. And each database will contain its own set of tables. We'll typically have one database for one application. So we build our web application. It's going to connect to one and only one database. And access permissions to our data are typically granted at the database level.
 
 ---
 
@@ -83,9 +83,9 @@ theme: Plain Jane, 2
   - Examples: products, customers, orders
   - Relationships between tables
 
-^ Next, (_click_) we have our table. A database is a set of tables, so a table is going to be a (_click_) set of columns and rows, just like we saw when we used the spreadsheet metaphor. Now, each table is going to (_click_) contain one type of information. That type is a single building block of our web application. And it's going to be a plural noun. (_click_) So for example products, customers, orders, countries, students, books, transactions, those are good examples of nouns that would be in our application.
+^ Next, (_click_) we have our table. A database is a set of tables, so a table is going to be a set of rows and columns, just like we saw when we used the spreadsheet metaphor. Now, each table is going to contain one type of information. That type is a single building block of our web application. And it's going to be a plural noun. So for example products, customers, orders, countries, students, books, transactions, those are good examples of nouns that would be in our application.
 
-^ And notice that they're all plural because our table is going to be a container holding many of these things. And the nouns don't have to be concrete, they can represent more abstract ideas like favorites, or settings. (_click_) And where with our database is they don't interrelate, our tables very much will interrelate. We're going to want to create relationships between our tables.
+^ And notice that they're all plural because our table is going to be a container holding many of these things. And the nouns don't have to be concrete, they can represent more abstract ideas like favorites, or settings. And where with our database they don't interrelate, our tables very much will interrelate. We're going to want to create relationships between our tables.
 
 ---
 
@@ -96,7 +96,7 @@ theme: Plain Jane, 2
   - Examples: first\_name, last\_name, email, password
   - Columns have types: strings, integers, etc.
 
-^ (_click_) Next we have column. A column is a (_click_) set of data of a single simple type. We saw that in the spreadsheet example. (_click_) So we have first name, last name, email password, and columns have (_click_) types so we have certain kinds of data that goes in certain kinds of columns. So strings go into the strings columns, integers go into the integers column and so on.
+^ (_click_) Next we have column. A column is a set of data of a single simple type. We saw that in the spreadsheet example. So we have first name, last name, email password, and columns have types so we have certain kinds of data that goes in certain kinds of columns. So strings go into the strings columns, integers go into the integers column and so on.
 
 ---
 
@@ -106,7 +106,7 @@ theme: Plain Jane, 2
   - Single record of data
   - Example: "Phil", "Sinatra", "ps42@drexel.edu", "secret"
 
-^ (_click_) We also have rows, that's a (_click_) single record of data. So for example, I might have a row that's Phil, Sinatra, ps42@drexel.edu and secret that corresponds to column types that list in the example bar.
+^ (_click_) We also have rows, that's a single record of data. So for example, I might have a row that's Phil, Sinatra, ps42@drexel.edu and secret that corresponds to column types that list in the example bar.
 
 ---
 
@@ -116,7 +116,7 @@ theme: Plain Jane, 2
   - Intersection of a column and a row
   - Example: first_name: "Phil"
 
-^ (_click_) And then last of all, we have a field. And a field is the (_click_) intersection of a column and a row. So (_click_) for example, in the first name column, in the field for the user Phil, I have the data, Phil. So the field is actually the intersection between the two. Now, field is often used interchangeably with column. And you'll very often hear me flip the two around. Don't let that throw you but technically speaking a field is an intersection between a row and a column.
+^ (_click_) And then last of all, we have a field. And a field is the intersection of a column and a row. So for example, in the first name column, in the field for the user Phil, I have the data, Phil. So the field is actually the intersection between the two. Now, field is often used interchangeably with column. And you'll very often hear me flip the two around. Don't let that throw you but technically speaking a field is an intersection between a row and a column.
 
 ---
 
@@ -129,7 +129,7 @@ theme: Plain Jane, 2
   - Table column whose values reference rows in another table
   - The foundation of relational databases
 
-^ The next important term to know about is (_click_) index. Index is going to be a (_click_) data structure on a table that is going to increase the speed of look ups in that table. It's part of what makes data bases really suited to work with data is the fact we have something like this that can speed up our access. (_click_) It works a lot like the index at the back of a book. You thumb to the index, you look up the reference that you're looking for, it tells you what page, and go directly to that page. Indexes work the same way. And then we have this idea of a (_click_) foreign key. (_click_) And that's going to be a table column whose values are going to reference the rows that are in another table. So this is where we're going to create our relationships. (_click_) This is how we'll create relational databases is by using foreign keys. We'll get to this a little more when we talk about creating relational tables. I wanted to at least introduce the term to you here.
+^ The next important term to know about is (_click_) index. Index is going to be a data structure on a table that is going to increase the speed of look ups in that table. It's part of what makes data bases really suited to work with data is the fact we have something like this that can speed up our access. It works a lot like the index at the back of a book. You thumb to the index, you look up the reference that you're looking for, it tells you what page, and go directly to that page. Indexes work the same way. And then we have this idea of a (_click_) foreign key. And that's going to be a table column whose values are going to reference the rows that are in another table. So this is where we're going to create our relationships. This is how we'll create relational databases is by using foreign keys. We'll get to this a little more when we talk about creating relational tables. I wanted to at least introduce the term to you here.
 
 ---
 
@@ -226,7 +226,7 @@ VALUES (value1, value2, value3);
 
 ^ First let's look at how we do a create, and we do that with the SQL `INSERT` statement.
 
-^ We `INSERT INTO`, then the table name. Then we provide a list of the columns inside parenthesis with commas between each value. We don't have to list ever column in the table, only the ones we want to insert into. Next we supply the values, also in parenthesis separated by commas. We have to supply the same number of values as we did column names, and we have to put the values in the correct order, so in this case _value1_ should be inserting into _column1_ and so on. That's all there is to an insert statement.
+^ We `INSERT INTO`, then the table name. Then we provide a list of the columns inside parenthesis with commas between each value. We don't have to list every column in the table, only the ones we want to insert into. Next we supply the values, also in parenthesis separated by commas. We have to supply the same number of values as we did column names, and we have to put the values in the correct order, so in this case _value1_ should be inserting into _column1_ and so on. That's all there is to an insert statement.
 
 ---
 
@@ -353,7 +353,7 @@ WHERE id = 1;
 
 ^ Now that we've learned the basic commands of MySQL, we're ready to learn how to use PHP to issue those commands. PHP offers three different ways to connect to MySQL. Database API is the technical term for each of these connection options. So, let's review these three Database APIs so that we can decide which one we're going to use. (_click_) The first one is going to be just called MySQL. If the original MySQL API for PHP. The second one is (_click_) MySQL I. The i stands for improved. It just has some improvements over MySQL. It's very, very similar. And the third option is (_click_) PDO. Which stands for PHP Data Objects.
 
-^ Now, all three of these are extremely similar. And once you learn how to use one, you can easily switch to another. The differences are kind of like the differences between driving different brands of cars. If you're driving a Honda when you're used to driving a Toyota. The controls for the windshield wipers and the headlights may be in different places. But overall, the concepts are the same. And with just a few minutes, you can make the switch. But there are a few key differences that are worth discussing.
+^ Now, all three of these are extremely similar. And once you learn how to use one, you can easily switch to another. The differences are kind of like the differences between driving different brands of cars. If you're driving a Honda when you're used to driving a Toyota. The controls for the windshield wipers and the headlights may be in different places. But overall, the concepts are the same. And with just a few minutes, you can make the switch.
 
 ---
 
@@ -363,7 +363,7 @@ WHERE id = 1;
 - `PDO` is robust - works with other types of databases
 - `mysqli` is our path!
 
-^ There is a comparison chart of all the differences and similarities between these methods, in the interest of time I'll fast forward and tell you we're going to be learning `mysqli` which is robust, well documented and the path of least resistance for us to connect to our database and perform our CRUD functions.
+^ You can review a comparison chart of all the differences and similarities between these methods online, in the interest of time I'll fast forward and tell you we're going to be learning `mysqli` which is robust, well documented and the path of least resistance for us to connect to our database and perform our CRUD functions.
 
 ---
 
@@ -375,15 +375,15 @@ WHERE id = 1;
 1. Release returned data
 1. Close database connection
 
-^ There are five basic steps for database interaction in PHP. First we create a database connection. That's a bit like picking up the telephone to call somebody.
+^ There are five basic steps for database interaction in PHP. (_click_) First we create a database connection. That's a bit like picking up the telephone to call somebody.
 
-^ Then, once we've got the database on the line, we're ready to start issuing commands to our database. So we perform our queries, those can be Select statements, they can be Insert statements, they can be Delete, all but MySQL that we just learned.
+^ Then, once we've got the database on the line, (_click_) we're ready to start issuing commands to our database. So we perform our queries, those can be Select statements, they can be Insert statements, they can be Delete, all but MySQL that we just learned.
 
-^ If we're doing a Select then it would, might return data to us. And we would use that return data. We could add there output it to the screen. To the browsers. So the user could see it. Or you might store it in an array. Or in a variable. Do something with it. The whole point of querying the database is to get back the data. And then we want to do something with that data.
+^ If we're doing a Select then it would, might return data to us. (_click_) And we would use that return data. We could add there output it to the screen. To the browsers. So the user could see it. Or you might store it in an array. Or in a variable. Do something with it. The whole point of querying the database is to get back the data. And then we want to do something with that data.
 
-^ Once we're done, then we can release the returned data. That's essentially telling PHP look, I'm done with this now, you can free up the memory that was used to hold that query. So you brought back a thousand records to me. I got what I needed, now you can free up those thousand records.
+^ Once we're done, (_click_) then we can release the returned data. That's essentially telling PHP look, I'm done with this now, you can free up the memory that was used to hold that query. So you brought back a thousand records to me. I got what I needed, now you can free up those thousand records.
 
-^ It's always a good idea to do. And then last, is close the database connection. That's a bit like hanging up the phone. We're all done at that point.
+^ It's always a good idea to do. And then last, (_click_) is close the database connection. That's a bit like hanging up the phone. We're all done at that point.
 
 ---
 
@@ -450,7 +450,7 @@ mysqli_close($connection);
 - `mysqli_fetch_row()`
 - `mysqli_free_result()`
 
-^ We need to be able to issue queries from MySQL and then work with data that it brings back to us. To do that, we're going to learn three new functions. They're MySQL API functions. They're `mysqli_query`, which is, of course, what we'll use to do our querying. Then if we get results back, we'll use `mysqli_fetch_row`. To work with those results, and then as we listed as one of our key steps, we want to free the result at the end. To tell PHP that it's okay to flush that memory and not try to hold onto those results any longer. That will free up some memory for us.
+^ We need to be able to issue queries from MySQL and then work with data that it brings back to us. To do that, we're going to learn three new functions. They're MySQL API functions. (_click_) They're `mysqli_query`, which is, of course, what we'll use to do our querying. Then if we get results back, (_click_) we'll use `mysqli_fetch_row`. To work with those results, and then as we listed as one of our key steps, (_click_) we want to free the result at the end. To tell PHP that it's okay to flush that memory and not try to hold onto those results any longer. That will free up some memory for us.
 
 ---
 
@@ -588,7 +588,7 @@ mysqli_free_result($result);
 
 ## Example Time
 
-^ Let's build an example and see these functions in action. (_week5/databases.php_)
+^ Let's build an example and see these functions in action. (_examples/week5/databases.php_)
 
 ---
 
@@ -598,7 +598,7 @@ mysqli_free_result($result);
   - Results are in a standard array
   - Keys are integers
 
-^ We've learned how to connect to MySQL using PHP and how to access the results that it returns. Next we're going to look a little closer at some of the options we have for working with those results sets. There are four ways to retrieve data from the query result, and the first of these we've already seen, it's (_click_) `mysqli_fetch_row`. And it brings back a row of data and assigns it to a (_click_) standard array. (_click_) The keys for each one of those columns are going to be integers. So if we want to get the menu name, we ask for what's in column one. That's the index position in the array one.
+^ We've learned how to connect to MySQL using PHP and how to access the results that it returns. Next we're going to look a little closer at some of the options we have for working with those results sets. There are four ways to retrieve data from the query result, and the first of these we've already seen, it's (_click_) `mysqli_fetch_row`. And it brings back a row of data and assigns it to a standard array. The keys for each one of those columns are going to be integers. So if we want to get the menu name, we ask for what's in column one. That's the index position in the array one.
 
 ---
 
@@ -608,7 +608,7 @@ mysqli_free_result($result);
   - Results are in an associative array
   - Keys are column names
 
-^ We have another option though. We can use (_click_) `mysqli_fetch_assoc` in its place, use it exactly the same way. The only difference is that the results are going to be returned in an (_click_) associative array. That's nice because now the (_click_) keys are going to be the column names. If we want to get menu name for our subject, well then we ask for the key menu name. It's nice and easy, it is a touch slower, because it does have to make an extra query to MySQL to find out the column names. So it can use them when it's constructing that associative array. But you won't notice a speed difference.
+^ We have another option though. We can use (_click_) `mysqli_fetch_assoc` in its place, use it exactly the same way. The only difference is that the results are going to be returned in an associative array. That's nice because now the keys are going to be the column names. If we want to get menu name for our subject, well then we ask for the key menu name. It's nice and easy, it is a touch slower, because it does have to make an extra query to MySQL to find out the column names. So it can use them when it's constructing that associative array. But you won't notice a speed difference.
 
 ---
 
@@ -618,11 +618,11 @@ mysqli_free_result($result);
   - Results in either or both types of arrays
   - `MYSQL_NUM`, `MYSQL_ASSOC`, `MYSQL_BOTH`
 
-^ Then we have a third option, which is `mysqli_fetch_array`. Again, used in exactly the same way, but this time, the results are returned in either a standard array, or an associative array, or both. Which is essentially an associative array that indexes it both by integers and by the column names. Now by default, it's going to do both, that's configurable. The last argument that you pass in can be a constant that will tell it either to return a number index, an associative array with the column index or both. By default it's going to do both, which is going to make your data set and your memory a lot larger.
+^ Then we have a third option, which is (_click_) `mysqli_fetch_array`. Again, used in exactly the same way, but this time, the results are returned in either a standard array, or an associative array, or both. Which is essentially an associative array that indexes it both by integers and by the column names. Now by default, it's going to do both, that's configurable. The last argument that you pass in can be a constant that will tell it either to return a number index, an associative array with the column index or both. By default it's going to do both, which is going to make your data set and your memory a lot larger.
 
 ^ The fourth option is for an object oriented approach, which is a more advanced technique that we're not going to be covering in this class.
 
-^ Let's look at examples of these techniques (_week5/databases_retrieval.php_)
+^ Let's look at examples of these techniques (_examples/week5/databases\_retrieval.php_)
 
 ---
 
@@ -630,17 +630,17 @@ mysqli_free_result($result);
 
 ^ We have learned how to read data from the database. The process for creating updating and deleting records is going to be very similar with a few key differences. The most important difference is just that when we do a select, we're expecting to get back rows of data as a result. Either that or an empty set with no rows. But still we're expecting a resource result to come back to us that we then parse through. With insert, update, and delete, we're not expecting to get any data back. We're just affecting a change on the database either inserting a row, deleting a row or updating a record in place. So it just returns true or false to us for whether it succeeded or whether it failed.
 
-^ (_week5/databases_insert.php_)
+^ (_exercises/week5/databases\_insert.php_)
 
 ---
 
 ## Updating and Deleting Records With PHP
 
-^ Updating and dealing records from PHP is going to be very similar to the insert process that we just saw in the last movie. However there are two important differences, let's take a look.
+^ Updating and dealing records from PHP is going to be very similar to the insert process that we just saw in the last example. However there are two important differences, let's take a look.
 
-^ (_week5/databases_update.php_)
+^ (_examples/week5/databases\_update.php_)
 
-^ (_week5/databases_delete.php_)
+^ (_examples/week5/databases\_delete.php_)
 
 ---
 
@@ -748,7 +748,7 @@ $menu_name = "'); DROP TABLE subjects; '";
 - Backslash before single-quote
 - `$menu_name = "Today\'s Trivia"`
 
-^ And the way we escape it, give it that special meaning to MySQL, is that so we put a back slash before single quotes. So for example, if we had "today's trivia", we just simply put a back slash in front of the single quote and then it'll be fine. MySQL will look at it, and when it gets to that backslash it will say oh, the next character has special behavior. This is not the ending single quote, this is just a single quote and then it will keep going from there until it gets to the real ending single quote.
+^ And the way we escape it, give it that special meaning to MySQL, is that so we put a (_click_) back slash before single quotes. So for example, if we had "today's trivia", we just simply put a (_click_) back slash in front of the single quote and then it'll be fine. MySQL will look at it, and when it gets to that backslash it will say oh, the next character has special behavior. This is not the ending single quote, this is just a single quote and then it will keep going from there until it gets to the real ending single quote.
 
 ---
 
@@ -760,7 +760,7 @@ $menu_name = "'); DROP TABLE subjects; '";
 
 ---
 
-## `Escaping strings for MySQL`
+## Escaping strings for MySQL
 
 ```php
 "INSERT INTO subjects (menu_name, position, visible)
@@ -776,7 +776,7 @@ VALUES ('Today's Trivia', 1, 1)"
 
 ---
 
-## `Escaping strings for MySQL`
+## Escaping strings for MySQL
 
 ```php
 "INSERT INTO subjects (menu_name, position, visible)
@@ -787,7 +787,7 @@ VALUES ('{$menu_name}', '{$position}', '{$visible}')"
 
 ---
 
-## `Escaping strings for MySQL`
+## Escaping strings for MySQL
 
 ```php
 $menu_name = "Today's Trivia";
@@ -797,7 +797,7 @@ $menu_name = "Today's Trivia";
 
 ---
 
-## `Escaping strings for MySQL`
+## Escaping strings for MySQL
 
 ```php
 $menu_name = mysqli_real_escape_string($connection, $menu_name);
