--- a/instructor_materials/IDM232-W07.md
+++ b/instructor_materials/IDM232-W07.md
@@ -14,6 +14,8 @@ theme: Plain Jane, 2
 
 ---
 
+[.build-lists: false]
+
 ## A New Job
 
 - client will provide:
@@ -21,9 +23,11 @@ theme: Plain Jane, 2
   - answers
   - basically: the data
 
-^ Our client has a new project request. They want to create a web based game application that mimics Family Feud. They're going to use this app to reinforce training topics that students have already studied in a classroom setting. The client will provide (_click_) the topics and (_click_) the answers that are revealed for each topic.
+^ Our client has a new project request. They want to create a web based game application that mimics Family Feud. They're going to use this app to reinforce training topics that students have already studied in a classroom setting. The client will provide the topics and the answers that are revealed for each topic.
 
 ---
+
+[.build-lists: false]
 
 ## A New Job
 
@@ -77,7 +81,7 @@ theme: Plain Jane, 2
   - prototype
 - Data structure & development?
 
-^ So the UI design portion of this is set - we can go off and work on sketches, wireframes, style tiles and being building the front end in the browser. But what about the back end? Dealing with the data? The files are going to run on a web server, but we will not have PHP or MySQL available in the production environment.
+^ (_click_) So the UI design portion of this is set - we can go off and work on sketches, wireframes, style tiles and being building the front end in the browser. But what about the back end? (_click_) Dealing with the data? The files are going to run on a web server, but we will not have PHP or MySQL available in the production environment.
 
 ^ Can we still use PHP to build this project? Can we use MySQL? Should we use something else?
 
@@ -88,7 +92,7 @@ theme: Plain Jane, 2
 - PHP: YES
 - MySQL: maybe
 
-^ I can tell you in this example, we definitely can still use PHP, and we may even use MySQL. Can anyone tell me how? Let's examine the data from the client. (_examples/week7/data.xlsx_)
+^ I can tell you in this example, (_click_) we definitely can still use PHP, and we (_click_) may even use MySQL. Can anyone tell me how? Let's examine the data from the client. (_examples/week7/data.xlsx_)
 
 ---
 
@@ -343,11 +347,11 @@ fclose($file);
 
 ^ Now we have the output for one of the questions with all of the available options. Before we loop through to the next category, we need to create an HTML file with this structure and data.
 
-^ fopen opens file or URL.
+^ (_click_) `fopen` opens file or URL.
 
-^ fwrite writes the contents of string to the file stream pointed to by handle.
+^ (_click_) `fwrite` writes the contents of string to the file stream pointed to by handle.
 
-^ fclose closes the file.
+^ (_click_) `fclose` closes the file.
 
 ---
 
@@ -583,7 +587,7 @@ $output .= file_get_contents($footer);
 - simple
 - refresh the page to refresh the output
 
-^ Navigating to the page in the browser is simple, requires less work. Every time we want to regenerate the files, we just have to refresh the page. Simple, but not elegant. Okay for a dev environment, but we wouldn't want to keep the process this rudimentry beyond our own desktop.
+^ Navigating to the page in the browser is (_click_) simple, requires less work. Every time we want to regenerate the files, we just have to refresh the page. Simple, (_click_) but not elegant. Okay for a dev environment, but we wouldn't want to keep the process this rudimentary beyond our own desktop.
 
 ---
 
@@ -593,7 +597,7 @@ $output .= file_get_contents($footer);
 - click button to reload
 - requires two redirects
 
-^ We could build a form that when submitted, moves to the `gen.php` script, executes it and then returns us to our form page. It's not to complicated, but still not very eligant since there woudl be two page reloads to complete the process.
+^ We could build a form that when submitted, moves to the `gen.php` script, executes it and then returns us to our form page. (_click_) It's not to complicated, but still not very (_click_) elegant since there would be (_click_) two page reloads to complete the process.
 
 ---
 
@@ -603,7 +607,9 @@ $output .= file_get_contents($footer);
 - click button to rebuild
 - elegant
 
-^ AJAX stands for Asynchronous JavaScript and XML. In a nutshell, it is the use of the XMLHttpRequest object to communicate with server-side scripts. It can send as well as receive information in a variety of formats, including JSON, XML, HTML, and even text files. AJAX’s most appealing characteristic is its "asynchronous" nature which means it can communcitare with the server, exchange data, and update the page all without having to refresh the browser.
+^ AJAX stands for Asynchronous JavaScript and XML. In a nutshell, it is the use of the XMLHttpRequest object to communicate with server-side scripts. It can send as well as receive information in a variety of formats, including JSON, XML, HTML, and even text files. AJAX’s most appealing characteristic is its "asynchronous" nature which means it can communicate with the server, exchange data, and update the page all without having to refresh the browser.
+
+^ (_click_) A setup like this will take a bit of extra work. (_click_) It will eliminate the multiple page redirects, (_click_) basically becoming a more elegant user experience.
 
 ---
 
@@ -613,7 +619,7 @@ $output .= file_get_contents($footer);
 - not very elegant
 - requires PHP and shell access
 
-^ Running the script from the command line would be simple, but much like some of the earlier options it would not be as elegant, and would require shell access which may not be possible outside of your local machine.
+^ (_click_) Running the script from the command line would be simple, but much like some of the earlier options it would (_click_) not be as elegant, and would (_click_) require shell access which may not be possible outside of your local machine.
 
 ---
 
@@ -642,7 +648,7 @@ var xhr = new XMLHttpRequest(),
     url = 'app/bin/gen.php';
 ```
 
-^ With AJAX you can setup an HTTP request that targets our `gen.php` script. So basically we want to push a button and run the script on the server, without having to refresh the page we're on. We want the script to run in the background, asynchronously, and report back to us when done. Here we're setting up the global variables we'll need.
+^ With AJAX you can setup an HTTP request that targets our `gen.php` script. So basically we want to push a button and run the script on the server, without having to refresh the page we're on. We want the script to run in the background, asynchronously, and report back to us when done. Here we're setting up the global variables we'll need. We do all of this with Javascript and PHP.
 
 ---
 
